# tmp

./: .gitignore  CMakeLists.txt  README.md  osf-tmp-config.cmake  osf_tmp-config.cmake
cmake/: osf-cmake-helpers.cmake  osf-tmp-config.cmake.in
include/osf/: tmp.hpp
include/osf/tmp/: always.hpp  call.hpp  lift.hpp  pipeline.hpp  try.hpp  vocabulary.hpp
include/osf/tmp/algorithm/: contains.hpp  fold_left.hpp  fold_right.hpp  sort.hpp  transform.hpp
include/osf/tmp/detail/: capabilities.hpp  dispatch.hpp  fusion_rebind.hpp
include/osf/tmp/fusion/: find_if.hpp
include/osf/tmp/sequence/: container.hpp  drop.hpp  erase.hpp  push_front.hpp  rotate.hpp  size.hpp  swap.hpp  take.hpp  unpack.hpp  zip_with_index.hpp
include/tmp/: comparison.hpp  fusion.hpp  identity.hpp  if.hpp  logic.hpp  pack.hpp
include/tmp/algorithm/: count_if.hpp  filter.hpp  find_if.hpp  fold_left.hpp  partition.hpp  product.hpp  remove_if.hpp  replace_if.hpp
include/tmp/detail/: capabilities.hpp  expression.hpp  fusion_execute.hpp
include/tmp/fusion/: contains.hpp  filter.hpp
include/tmp/sequence/: each.hpp  index.hpp  insert.hpp  join.hpp  make_sequence.hpp  pop_front.hpp  push_back.hpp  reverse.hpp  tee.hpp  zip.hpp
test/: CMakeLists.txt  contains_test.hpp  count_if_test.hpp  erase_test.hpp  filter_test.hpp  find_if_test.hpp  fold_left_test.hpp  fold_right_test.hpp  join_test.hpp  logic_test.hpp  partition_test.hpp  pipeline_test.hpp  product_test.hpp  reverse_test.hpp  sort_test.hpp  take_test.hpp  tee_test.hpp  test.cpp  test_util.hpp  try_test.hpp
